Bug 142150 - Application crashes when EDITING line end styles (arrows)
Summary: Application crashes when EDITING line end styles (arrows)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All macOS (All)
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.2.0 target:7.1.4
Keywords: bibisected, bisected, regression, wantBacktrace
Depends on:
Blocks:
 
Reported: 2021-05-07 11:07 UTC by birnbach@posteo.de
Modified: 2021-06-11 04:20 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
line end style menu with hover text -> click text to crash LO (67.18 KB, image/png)
2021-05-12 13:25 UTC, birnbach@posteo.de
Details

Note You need to log in before you can comment on or make changes to this bug.
Description birnbach@posteo.de 2021-05-07 11:07:07 UTC
Description:
Line end style may be manipulated via selection lists in properties pane, context menu or drawing menu bar. End style names will be displayed near hovering mouse cursor, sometimes occluding an entry. Clicking on the text crashes LibreOffice. Application is terminated and restarted.


Steps to Reproduce:
1. create or open drawing document
2. draw a line
3. select line
4. change line end style to plain (topmost menu entry on right hand side)
5. open menu again and let mouse hover over top right entry. 
6. end style name will be shown in text ("- none -") near mouse cursor
7. click on the text



Actual Results:
LibreOffice crashes. A notification window appears, informing about which documents will be restored upon application restart.

Expected Results:
End style is applied to line


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.1.2.2 / LibreOffice Community
Build ID: 8a45595d069ef5570103caea1b71cc9d82b2aae4
CPU threads: 6; OS: Mac OS X 10.15.7; UI render: default; VCL: osx
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded
Comment 1 psidiumcode 2021-05-11 18:44:55 UTC
Can you attach screen shots of the 4th and 5th steps?
Comment 2 birnbach@posteo.de 2021-05-12 13:25:18 UTC
Created attachment 171921 [details]
line end style menu with hover text  -> click text to crash LO

I neede to make this shot in a hurry unless the hover text would disappear. The text changes in accordance to the item the mouse hovers over. Note that the mouse pointer is not in the screenshot, though.

Once I click on such a text, LO crashes.
Comment 3 QA Administrators 2021-05-13 03:59:18 UTC Comment hidden (obsolete)
Comment 4 psidiumcode 2021-05-14 17:37:21 UTC
I could reproduce it.  
In the “Arrow style” button dropdown when clicking on a tooltip of any of the arrow icons will crash the application. Reproduced in Draw, Writer, Calc, Impress. 

Version: 7.0.5.2
Build ID: 64390860c6cd0aca4beafafcfd84613dd9dfb63a
CPU threads: 12; OS: Mac OS X 10.15.7; UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded

Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: b137ff671f25a605334083c0f87ada84eaa0fcf2
CPU threads: 12; OS: Mac OS X 10.15.7; UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 5 Xisco Faulí 2021-05-25 08:50:35 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=23a1b7bad5147ee48d7f920085426d8846559af7

author	Caolán McNamara <caolanm@redhat.com>	2020-05-15 14:54:58 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2020-05-15 17:27:10 +0200
commit 23a1b7bad5147ee48d7f920085426d8846559af7 (patch)
tree c8ea9636d9f2a6830d1cd3e5ffa6c55b82834f1c
parent f0ca5a0c447f4fe4667693d744af61eaeb0625ee (diff)
Resolves: tdf#132461 set color on mouse release, not press

Bisected with: mac-7.0

Adding Cc: to Caolán McNamara
Comment 6 Caolán McNamara 2021-05-25 10:28:54 UTC
This is only reproducible on mac, right ?
What happens if the keyboard is used to select the arrow with return, does that also crash ?
Comment 7 Xisco Faulí 2021-05-25 10:35:00 UTC
(In reply to Caolán McNamara from comment #6)
> This is only reproducible on mac, right ?
> What happens if the keyboard is used to select the arrow with return, does
> that also crash ?

So the problem is not when clicking on the arrows but when clicking on the tooltip. On Linux or Windows, it's not possible to click on the tooltip because its position is updated when the mouse is moved. I guess this issue could also be reproduced on linux if we force the tooltip to be drawn in the middle of the cursor
Comment 8 birnbach@posteo.de 2021-05-25 10:41:01 UTC
(In reply to Caolán McNamara from comment #6)
> This is only reproducible on mac, right ?
> What happens if the keyboard is used to select the arrow with return, does
> that also crash ?

It is not possible to select a hover text with the keyboard. 

Also, hover text disappears upon keyboard navigation. 

If an item is selected by keyboard (up/dn/rt/lt) and then the hover text is provoked by placing the mouse over said entry, activating the entry using RETURN is safe and LO stays on.


So no, keyboard operation is safe.
Comment 9 Xisco Faulí 2021-05-25 10:45:56 UTC
(In reply to Caolán McNamara from comment #6)
> This is only reproducible on mac, right ?
> What happens if the keyboard is used to select the arrow with return, does
> that also crash ?

OTOH, using the return key, crashes on linux and windows here, but it seems it's another issue
Comment 10 Xisco Faulí 2021-05-25 11:02:31 UTC
(In reply to Xisco Faulí from comment #9)
> (In reply to Caolán McNamara from comment #6)
> > This is only reproducible on mac, right ?
> > What happens if the keyboard is used to select the arrow with return, does
> > that also crash ?
> 
> OTOH, using the return key, crashes on linux and windows here, but it seems
> it's another issue

Reported in bug 142479
Comment 11 Caolán McNamara 2021-05-27 19:32:42 UTC
can finally reproduce on my terribly slow mac
Comment 12 Commit Notification 2021-05-28 07:47:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e2970060121824650f95421d8d2411840a40311f

tdf#142150 nothing already selected on MouseUp without previous MouseDown

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2021-05-28 07:49:53 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/2a0d5643234cd0989f91589695694c809d82e344

tdf#142150 nothing already selected on MouseUp without previous MouseDown

It will be available in 7.1.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2021-05-28 09:23:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-1-4":

https://git.libreoffice.org/core/commit/899634104854ba5fedc616ff0e53b59ad61cc97a

tdf#142150 nothing already selected on MouseUp without previous MouseDown

It will be available in 7.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.