tdf#142150 nothing already selected on MouseUp without previous MouseDown

if mouse down was on tooltip (possible on macOS)

Change-Id: Icb4328fa6977356c3bac5f37d42e99ae8d4e4b98
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/116273
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>